--- a/boot03/src/main/resources/templates/common/fragments/default_header.html
+++ b/boot03/src/main/resources/templates/common/fragments/default_header.html
@@ -5,9 +5,9 @@
     <header class="d-flex justify-content-center py-3">
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">게시판 전체조회</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">게시글 등록</a></li>
+        <li class="nav-item"><a th:href="@{ /boardList}" class="nav-link">게시판 전체조회</a></li>
+        <li class="nav-item"><a th:href="@{ /boardInsert}" class="nav-link">게시글 등록</a></li>
       </ul>
     </header>
   </div>
-</block>
+</th:block>
